// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stories Storyshots Footer Comic Relief 1`] = `
<div
  data-test-id="container"
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <footer
        role="contentinfo"
        style={
          Object {
            "footer__branding": Object {
              "height": "20%",
              "marginLeft": "auto",
              "marginRight": "auto",
              "textAlign": "center",
              "width": "100px",
            },
          }
        }
      >
        <div
          className="footer__social-links"
        >
          <div
            className={null}
          />
          <ul>
            <li>
              <a
                className="icon__fb"
                href="https://www.facebook.com/comicrelief"
                rel="noopener noreferrer"
                target="_blank"
                title="facebook"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-facebook"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__twitter"
                href="https://twitter.com/comicrelief"
                rel="noopener noreferrer"
                target="_blank"
                title="twitter"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-twitter"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__youtube"
                href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
                rel="noopener noreferrer"
                target="_blank"
                title="youtube"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-youtube"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__instagram"
                href="https://www.instagram.com/comicrelief"
                rel="noopener noreferrer"
                target="_blank"
                title="instagram"
              >
                <img
                  alt="instagram"
                  src="test-file-stub"
                />
              </a>
            </li>
          </ul>
        </div>
        <div
          className="region region-footer cr-footer"
        >
          <nav
            className="menu--footer"
          >
            <ul
              className="menu"
              id="footer-menu"
            >
              <li
                className="menu-item"
              >
                <a
                  href="https://lite.comicrelief.com/legal/privacy-notice"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Legal
                </a>
              </li>
              <li
                className="menu-item"
              >
                <a
                  href="https://lite.comicrelief.com/legal/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Privacy notice
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <div
          className="footer__copyright"
        >
          <p>
            Comic Relief is the trading name of Charity Projects, a registered charity in England and Wales (326568) and Scotland (SC039730), which is a company limited by guarantee registered in England and Wales (01806414). Registered address: 1st Floor, 89 Albert Embankment London, SE1 7TP.
          </p>
        </div>
        <div
          className="footer__branding"
        >
          <div
            className={null}
          />
          <a
            href="https://www.comicrelief.com/"
            rel="home noopener noreferrer"
            target="_blank"
            title="Comic Relief"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#crlogo2018"
              />
            </svg>
          </a>
        </div>
      </footer>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginBottom": "20px",
              "marginTop": "20px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Footer
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              Comic Relief
            </h2>
          </div>
          <div
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              comicrelief.com footer
            </div>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              className="css-4akams"
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    Footer
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        copy
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Comic Relief is the trading name of Charity Projec…
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        source
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            https://www.comicrelief.com
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        campaign
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            comicrelief
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        fallbackMenu
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            [
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    url
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'https://lite.comicrelief.com/legal/privacy-notice'
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    title
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'Legal'
                                </span>
                                }
                              </span>
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    url
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'https://lite.comicrelief.com/legal/'
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    title
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'Privacy notice'
                                </span>
                                }
                              </span>
                            </span>
                            ]
                          </span>
                          }
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </div>
              <button
                className="css-py33tc"
                onClick={[Function]}
              >
                <div
                  className="css-kv47nt"
                >
                  <div
                    style={
                      Object {
                        "marginBottom": 6,
                      }
                    }
                  >
                    Copied!
                  </div>
                  <div>
                    Copy
                  </div>
                </div>
              </button>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                Footer
                " Component
              </h2>
              <table
                className="css-1ytzlk7"
              >
                <thead>
                  <tr>
                    <th
                      className="css-d52hbj"
                    >
                      property
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      propType
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      required
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      default
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      campaign
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span />
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      yes
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      fallbackMenu
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span />
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      yes
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      noLinks
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        false
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      noSocial
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        false
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Storyshots Footer Red Nose Day 1`] = `
<div
  data-test-id="container"
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <footer
        role="contentinfo"
        style={
          Object {
            "footer__branding": Object {
              "height": "20%",
              "marginLeft": "auto",
              "marginRight": "auto",
              "textAlign": "center",
              "width": "100px",
            },
          }
        }
      >
        <div
          className="footer__social-links"
        >
          <div
            className={null}
          />
          <ul>
            <li>
              <a
                className="icon__fb"
                href="https://www.facebook.com/officialrednoseday"
                rel="noopener noreferrer"
                target="_blank"
                title="facebook"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-facebook"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__twitter"
                href="https://twitter.com/rednoseday"
                rel="noopener noreferrer"
                target="_blank"
                title="twitter"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-twitter"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__youtube"
                href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
                rel="noopener noreferrer"
                target="_blank"
                title="youtube"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-youtube"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__instagram"
                href="https://www.instagram.com/rednoseday"
                rel="noopener noreferrer"
                target="_blank"
                title="instagram"
              >
                <img
                  alt="instagram"
                  src="test-file-stub"
                />
              </a>
            </li>
          </ul>
        </div>
        <div
          className="region region-footer cr-footer"
        >
          <nav
            className="menu--footer"
          >
            <ul
              className="menu"
              id="footer-menu"
            />
          </nav>
        </div>
        <div
          className="footer__copyright"
        >
          <p>
            copyright 2018
          </p>
        </div>
        <div
          className="footer__branding"
        >
          <div
            className={null}
          />
          <a
            href="https://www.comicrelief.com/"
            rel="home noopener noreferrer"
            target="_blank"
            title="Comic Relief"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#crlogo2018"
              />
            </svg>
          </a>
        </div>
      </footer>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginBottom": "20px",
              "marginTop": "20px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Footer
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              Red Nose Day
            </h2>
          </div>
          <div
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              rednoseday.com footer
            </div>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              className="css-4akams"
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    Footer
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        copy
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            copyright 2018
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        source
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            https://www.comicrelief.com
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        campaign
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            rednoseday
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        fallbackMenu
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            [
                            ]
                          </span>
                          }
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </div>
              <button
                className="css-py33tc"
                onClick={[Function]}
              >
                <div
                  className="css-kv47nt"
                >
                  <div
                    style={
                      Object {
                        "marginBottom": 6,
                      }
                    }
                  >
                    Copied!
                  </div>
                  <div>
                    Copy
                  </div>
                </div>
              </button>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                Footer
                " Component
              </h2>
              <table
                className="css-1ytzlk7"
              >
                <thead>
                  <tr>
                    <th
                      className="css-d52hbj"
                    >
                      property
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      propType
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      required
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      default
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      campaign
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span />
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      yes
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      fallbackMenu
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span />
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      yes
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      noLinks
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        false
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      noSocial
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        false
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stories Storyshots Footer Sport Relief 1`] = `
<div
  data-test-id="container"
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <footer
        role="contentinfo"
        style={
          Object {
            "footer__branding": Object {
              "height": "20%",
              "marginLeft": "auto",
              "marginRight": "auto",
              "textAlign": "center",
              "width": "100px",
            },
          }
        }
      >
        <div
          className="footer__social-links"
        >
          <div
            className={null}
          />
          <ul>
            <li>
              <a
                className="icon__fb"
                href="https://www.facebook.com/sportrelief"
                rel="noopener noreferrer"
                target="_blank"
                title="facebook"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-facebook"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__twitter"
                href="https://twitter.com/sportrelief"
                rel="noopener noreferrer"
                target="_blank"
                title="twitter"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-twitter"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__youtube"
                href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
                rel="noopener noreferrer"
                target="_blank"
                title="youtube"
              >
                <svg
                  className="icon"
                >
                  <use
                    xlinkHref="#icon-youtube"
                  />
                </svg>
              </a>
            </li>
            <li>
              <a
                className="icon__instagram"
                href="https://www.instagram.com/sportrelief"
                rel="noopener noreferrer"
                target="_blank"
                title="instagram"
              >
                <img
                  alt="instagram"
                  src="test-file-stub"
                />
              </a>
            </li>
          </ul>
        </div>
        <div
          className="region region-footer cr-footer"
        >
          <nav
            className="menu--footer"
          >
            <ul
              className="menu"
              id="footer-menu"
            >
              <li
                className="menu-item"
              >
                <a
                  href="https://lite.sportrelief.com/terms-of-use"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Legal
                </a>
              </li>
              <li
                className="menu-item"
              >
                <a
                  href="https://lite.sportrelief.com/privacy-notice"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Privacy notice
                </a>
              </li>
            </ul>
          </nav>
        </div>
        <div
          className="footer__copyright"
        >
          <p>
            Sport Relief is an initiative of Comic Relief registered charity 326568 (England/Wales); SC039730 (Scotland)
          </p>
        </div>
        <div
          className="footer__branding"
        >
          <div
            className={null}
          />
          <a
            href="https://www.comicrelief.com/"
            rel="home noopener noreferrer"
            target="_blank"
            title="Comic Relief"
          >
            <svg
              className="icon"
            >
              <use
                xlinkHref="#crlogo2018"
              />
            </svg>
          </a>
        </div>
      </footer>
    </div>
    <button
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div>
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginBottom": "20px",
              "marginTop": "20px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Footer
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              Sport Relief
            </h2>
          </div>
          <div
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              sportrelief.com footer
            </div>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              className="css-4akams"
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    Footer
                  </span>
                  <span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        copy
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            Sport Relief is an initiative of Comic Relief regi…
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        source
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            https://www.sportrelief.com
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        campaign
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          "
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            sportrelief
                          </span>
                          "
                        </span>
                      </span>
                    </span>
                    <span>
                      <span>
                        <br />
                          
                      </span>
                      <span
                        style={Object {}}
                      >
                        fallbackMenu
                      </span>
                      <span>
                        =
                        <span
                          style={Object {}}
                        >
                          {
                          <span
                            style={
                              Object {
                                "color": "#666",
                              }
                            }
                          >
                            [
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    url
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'https://lite.sportrelief.com/terms-of-use'
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    title
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'Legal'
                                </span>
                                }
                              </span>
                            </span>
                            ,
                            <span>
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    url
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'https://lite.sportrelief.com/privacy-notice'
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    title
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  'Privacy notice'
                                </span>
                                }
                              </span>
                            </span>
                            ]
                          </span>
                          }
                        </span>
                      </span>
                      <br />
                    </span>
                  </span>
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    /&gt;
                  </span>
                </div>
              </div>
              <button
                className="css-py33tc"
                onClick={[Function]}
              >
                <div
                  className="css-kv47nt"
                >
                  <div
                    style={
                      Object {
                        "marginBottom": 6,
                      }
                    }
                  >
                    Copied!
                  </div>
                  <div>
                    Copy
                  </div>
                </div>
              </button>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                Footer
                " Component
              </h2>
              <table
                className="css-1ytzlk7"
              >
                <thead>
                  <tr>
                    <th
                      className="css-d52hbj"
                    >
                      property
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      propType
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      required
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      default
                    </th>
                    <th
                      className="css-d52hbj"
                    >
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      campaign
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span />
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      yes
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      fallbackMenu
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span />
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      yes
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      noLinks
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        false
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                  <tr>
                    <td
                      className="css-1ygfcef"
                    >
                      noSocial
                    </td>
                    <td
                      className="css-1ygfcef"
                    >
                      <span>
                        unknown
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      -
                    </td>
                    <td
                      className="css-d52hbj"
                    >
                      <span
                        style={
                          Object {
                            "color": "#a11",
                          }
                        }
                      >
                        false
                      </span>
                    </td>
                    <td
                      className="css-d52hbj"
                    />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
